# docs/swagger.yaml
@@ -1,12 +1,18 @@
 basePath: /api/v1
 definitions:
-  apiv1.CreatePanelInput:
+  apiv1.CreatePanelParams:
     properties:
       clientId:
+        maxLength: 128
+        minLength: 1
         type: string
       clientSecret:
+        maxLength: 128
+        minLength: 1
         type: string
       name:
+        maxLength: 64
+        minLength: 1
         type: string
       url:
         type: string
@@ -16,15 +22,21 @@ definitions:
     - name
     - url
     type: object
-  apiv1.UpdatePanelInput:
+  apiv1.UpdatePanelParams:
     properties:
       clientId:
+        maxLength: 128
+        minLength: 1
         type: string
       clientSecret:
+        maxLength: 128
+        minLength: 1
         type: string
       id:
         type: integer
       name:
+        maxLength: 64
+        minLength: 1
         type: string
       url:
         type: string
@@ -70,7 +82,6 @@ paths:
     get:
       consumes:
       - application/json
-      description: 获取面板列表
       produces:
       - application/json
       responses:
@@ -94,14 +105,13 @@ paths:
     post:
       consumes:
       - application/json
-      description: 创建面板
       parameters:
       - description: 创建面板
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/apiv1.CreatePanelInput'
+          $ref: '#/definitions/apiv1.CreatePanelParams'
       produces:
       - application/json
       responses:
@@ -121,14 +131,13 @@ paths:
     put:
       consumes:
       - application/json
-      description: 更新面板
       parameters:
       - description: 创建面板
         in: body
         name: input
         required: true
         schema:
-          $ref: '#/definitions/apiv1.UpdatePanelInput'
+          $ref: '#/definitions/apiv1.UpdatePanelParams'
       produces:
       - application/json
       responses:
@@ -151,7 +160,6 @@ paths:
     delete:
       consumes:
       - application/json
-      description: 删除面板
       parameters:
       - description: 面板ID
         in: path
@@ -177,7 +185,6 @@ paths:
     get:
       consumes:
       - application/json
-      description: 获取面板
       parameters:
       - description: 面板ID
         in: path
